[ LaTeX backend ] Fixed a bug.
If a code block started with an empty line containing trailing
whitespace, then the generated code was sometimes incorrect.

--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -101,6 +101,47 @@
 </a
       ><a name="362" class="Comment"
       >\hrule
+</a
+      ><a name="369"
+      >\begin{code}
+</a
+      ><a name="382" class="Keyword"
+      >module</a
+      ><a name="388"
+      > </a
+      ><a name="389" href="Trailing-whitespace.html#389" class="Module"
+      >_</a
+      ><a name="390"
+      > </a
+      ><a name="391" class="Keyword"
+      >where</a
+      ><a name="396"
+      >
+\end{code}
+\begin{code}
+  
+  </a
+      ><a name="426" class="Keyword"
+      >postulate</a
+      ><a name="435"
+      >
+    </a
+      ><a name="440" href="Trailing-whitespace.html#440" class="Postulate"
+      >C</a
+      ><a name="441"
+      > </a
+      ><a name="442" class="Symbol"
+      >:</a
+      ><a name="443"
+      > </a
+      ><a name="444" class="PrimitiveType"
+      >Set</a
+      ><a name="447"
+      >
+\end{code}
+</a
+      ><a name="459" class="Comment"
+      >\hrule
 
 \end{document}
 </a
