[ LaTeX backend ] Small change to the treatment of trailing whitespace.
Previously an alignment column was set up, and sometimes indentation
generated, if the final line of a code block ended with at least two
trailing space characters. Now this should no longer happen.

--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -142,6 +142,61 @@
 </a
       ><a name="459" class="Comment"
       >\hrule
+\begin{AgdaAlign}
+</a
+      ><a name="484"
+      >\begin{code}
+</a
+      ><a name="497" class="Keyword"
+      >postulate</a
+      ><a name="506"
+      >
+  </a
+      ><a name="509" href="Trailing-whitespace.html#509" class="Postulate"
+      >F</a
+      ><a name="510"
+      >  </a
+      ><a name="512" class="Symbol"
+      >:</a
+      ><a name="513"
+      > </a
+      ><a name="514" class="PrimitiveType"
+      >Set</a
+      ><a name="517"
+      > </a
+      ><a name="518" class="Symbol"
+      >&#8594;</a
+      ><a name="519"
+      > </a
+      ><a name="520" class="PrimitiveType"
+      >Set</a
+      ><a name="523"
+      >
+  </a
+      ><a name="526" href="Trailing-whitespace.html#526" class="Postulate"
+      >X</a
+      ><a name="527"
+      >  </a
+      ><a name="529" class="Symbol"
+      >:</a
+      ><a name="530"
+      > </a
+      ><a name="531" href="Trailing-whitespace.html#509" class="Postulate"
+      >F</a
+      ><a name="532"
+      >  
+\end{code}
+\begin{code}
+          </a
+      ><a name="569" href="Trailing-whitespace.html#123" class="Postulate"
+      >A</a
+      ><a name="570"
+      >
+\end{code}
+</a
+      ><a name="582" class="Comment"
+      >\end{AgdaAlign}
+\hrule
 
 \end{document}
 </a
