[ latex ] Make latex frontend and backend consistent

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
@@ -32,10 +32,10 @@
       >where</a
       ><a name="124"
       >
-\end{code}
-</a
-      ><a name="136" class="Comment"
+\end{code}</a
+      ><a name="135" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
