--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
@@ -36,10 +36,10 @@
       >Set</a
       ><a name="111"
       >
-\end{code}
-</a
-      ><a name="123" class="Comment"
+\end{code}</a
+      ><a name="122" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
