--- a/test/LaTeXAndHTML/succeed/Indenting.html
+++ b/test/LaTeXAndHTML/succeed/Indenting.html
@@ -74,10 +74,10 @@
       >Nat</a
       ><a name="128"
       >
-\end{code}
-</a
-      ><a name="140" class="Comment"
+\end{code}</a
+      ><a name="139" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
