--- a/test/LaTeXAndHTML/succeed/Indenting2.html
+++ b/test/LaTeXAndHTML/succeed/Indenting2.html
@@ -74,10 +74,10 @@
       >Nat</a
       ><a name="131"
       >
-\end{code}
-</a
-      ><a name="143" class="Comment"
+\end{code}</a
+      ><a name="142" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
