--- a/test/LaTeXAndHTML/succeed/Indenting4.html
+++ b/test/LaTeXAndHTML/succeed/Indenting4.html
@@ -32,10 +32,10 @@
       >where</a
       ><a name="99"
       >
-\end{code}
-</a
-      ><a name="111" class="Comment"
+\end{code}</a
+      ><a name="110" class="Comment"
       >
+
 </a
       ><a name="112"
       >\begin{code}
@@ -85,10 +85,10 @@
       >Set</a
       ><a name="161"
       >
-\end{code}
-</a
-      ><a name="173" class="Comment"
+\end{code}</a
+      ><a name="172" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
