--- a/test/LaTeXAndHTML/succeed/Indenting6.html
+++ b/test/LaTeXAndHTML/succeed/Indenting6.html
@@ -136,10 +136,10 @@
       >public</a
       ><a name="201"
       >
-\end{code}
-</a
-      ><a name="213" class="Comment"
+\end{code}</a
+      ><a name="212" class="Comment"
       >
+
 </a
       ><a name="214"
       >\begin{code}
@@ -231,10 +231,10 @@
       >X</a
       ><a name="307"
       >
-\end{code}
-</a
-      ><a name="319" class="Comment"
+\end{code}</a
+      ><a name="318" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
