--- a/test/LaTeXAndHTML/succeed/Indenting7.html
+++ b/test/LaTeXAndHTML/succeed/Indenting7.html
@@ -257,10 +257,10 @@
       >where</a
       ><a name="459"
       >
-\end{code}
-</a
-      ><a name="471" class="Comment"
+\end{code}</a
+      ><a name="470" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
