--- a/test/LaTeXAndHTML/succeed/IndentingContainer.html
+++ b/test/LaTeXAndHTML/succeed/IndentingContainer.html
@@ -138,10 +138,10 @@
       >public</a
       ><a name="203"
       >
-\end{code}
-</a
-      ><a name="215" class="Comment"
+\end{code}</a
+      ><a name="214" class="Comment"
       >
+
 </a
       ><a name="216"
       >\begin{code}
@@ -379,10 +379,10 @@
       >y</a
       ><a name="392"
       >
-\end{code}
-</a
-      ><a name="404" class="Comment"
+\end{code}</a
+      ><a name="403" class="Comment"
       >
+
 </a
       ><a name="405"
       >\begin{code}
@@ -455,10 +455,10 @@
       >Set</a
       ><a name="521"
       >
-\end{code}
-</a
-      ><a name="533" class="Comment"
+\end{code}</a
+      ><a name="532" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
