--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.html
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.html
@@ -93,10 +93,10 @@
       ><a name="168"
       >
 
-\end{code}
-</a
-      ><a name="181" class="Comment"
+\end{code}</a
+      ><a name="180" class="Comment"
       >
+
 Let's try some infix declaration with surrounding text.
 
 </a
@@ -116,10 +116,10 @@ Let's try some infix declaration with surrounding text.
       ><a name="280"
       >
 
-\end{code}
-</a
-      ><a name="293" class="Comment"
+\end{code}</a
+      ><a name="292" class="Comment"
       >
+
 In the following, we declare the fixity of two operators.
 
 </a
@@ -142,10 +142,10 @@ In the following, we declare the fixity of two operators.
       >_*_</a
       ><a name="383"
       >
-\end{code}
-</a
-      ><a name="395" class="Comment"
+\end{code}</a
+      ><a name="394" class="Comment"
       >
+
 A fixity declaration can preceed the actual declaration of the names.
 
 </a
@@ -172,10 +172,10 @@ A fixity declaration can preceed the actual declaration of the names.
       >Set</a
       ><a name="505"
       >
-\end{code}
-</a
-      ><a name="517" class="Comment"
+\end{code}</a
+      ><a name="516" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
