--- a/test/LaTeXAndHTML/succeed/Issue1053.html
+++ b/test/LaTeXAndHTML/succeed/Issue1053.html
@@ -174,10 +174,10 @@
       >x</a
       ><a name="161"
       >
-\end{code}
-</a
-      ><a name="173" class="Comment"
+\end{code}</a
+      ><a name="172" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
