--- a/test/LaTeXAndHTML/succeed/Issue1062.html
+++ b/test/LaTeXAndHTML/succeed/Issue1062.html
@@ -1306,10 +1306,10 @@
       >s&#8242;</a
       ><a name="1486"
       >
-\end{code}
-</a
-      ><a name="1498" class="Comment"
-      >Problem: The &#8759; in the last let statement is not colored with constructor color.
+\end{code}</a
+      ><a name="1497" class="Comment"
+      >
+Problem: The &#8759; in the last let statement is not colored with constructor color.
 \end{document}
 </a
       ></pre
