--- a/test/LaTeXAndHTML/succeed/Issue1241.html
+++ b/test/LaTeXAndHTML/succeed/Issue1241.html
@@ -55,10 +55,10 @@ This is the actual test.
       >Set</a
       ><a name="170"
       >
-\end{code}
-</a
-      ><a name="182" class="Comment"
+\end{code}</a
+      ><a name="181" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
