--- a/test/LaTeXAndHTML/succeed/Issue1618.html
+++ b/test/LaTeXAndHTML/succeed/Issue1618.html
@@ -165,10 +165,10 @@ The let should be properly aligned in the following code:
       >A</a
       ><a name="294"
       >
-\end{code}
-</a
-      ><a name="306" class="Comment"
+\end{code}</a
+      ><a name="305" class="Comment"
       >
+
 This should also work if the new block is following after the
 keyword, as opposed to on a new line.
 
@@ -318,10 +318,10 @@ keyword, as opposed to on a new line.
       >A</a
       ><a name="531"
       >
-\end{code}
-</a
-      ><a name="543" class="Comment"
-      >\end{document}
+\end{code}</a
+      ><a name="542" class="Comment"
+      >
+\end{document}
 </a
       ></pre
     ></body
