--- a/test/LaTeXAndHTML/succeed/Issue2019.html
+++ b/test/LaTeXAndHTML/succeed/Issue2019.html
@@ -84,10 +84,10 @@
       >-- NARROW NO-BREAK SPACE (&quot;\,&quot; with Agda input method)</a
       ><a name="371"
       >
-\end{code}
-</a
-      ><a name="383" class="Comment"
+\end{code}</a
+      ><a name="382" class="Comment"
       >
+
 % Various whitespace characters: &quot; &#160;&#8196;&#8239;&quot;.
 </a
       ><a name="425"
@@ -138,10 +138,10 @@
       >&quot; &#160;&#8196;&#8239;&quot;</a
       ><a name="591"
       >
-\end{code}
-</a
-      ><a name="603" class="Comment"
+\end{code}</a
+      ><a name="602" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
