--- a/test/LaTeXAndHTML/succeed/Issue2445.html
+++ b/test/LaTeXAndHTML/succeed/Issue2445.html
@@ -10417,10 +10417,10 @@
       >where</a
       ><a name="12056"
       >
-\end{code}
-</a
-      ><a name="12068" class="Comment"
+\end{code}</a
+      ><a name="12067" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
