--- a/test/LaTeXAndHTML/succeed/Issue2536.html
+++ b/test/LaTeXAndHTML/succeed/Issue2536.html
@@ -91,10 +91,10 @@
       >x</a
       ><a name="135"
       >
-\end{code}
-</a
-      ><a name="147" class="Comment"
+\end{code}</a
+      ><a name="146" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
