--- a/test/LaTeXAndHTML/succeed/Issue982.html
+++ b/test/LaTeXAndHTML/succeed/Issue982.html
@@ -168,10 +168,10 @@
       >public</a
       ><a name="1222"
       >
-\end{code}
-</a
-      ><a name="1234" class="Comment"
+\end{code}</a
+      ><a name="1233" class="Comment"
       >
+
 </a
       ><a name="1235"
       >\begin{code}
@@ -409,10 +409,10 @@
       >y</a
       ><a name="1411"
       >
-\end{code}
-</a
-      ><a name="1423" class="Comment"
+\end{code}</a
+      ><a name="1422" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
