--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
@@ -33,10 +33,10 @@
       >where</a
       ><a name="113"
       >
-\end{code}
-</a
-      ><a name="125" class="Comment"
-      >}
+\end{code}</a
+      ><a name="124" class="Comment"
+      >
+}
 
 </a
       ><a name="128"
@@ -544,10 +544,10 @@
       >0</a
       ><a name="616"
       >
-\end{code}
-</a
-      ><a name="628" class="Comment"
+\end{code}</a
+      ><a name="627" class="Comment"
       >
+
 </a
       ><a name="629"
       >\begin{code}
@@ -711,10 +711,10 @@
       >R</a
       ><a name="798"
       >
-\end{code}
-</a
-      ><a name="810" class="Comment"
+\end{code}</a
+      ><a name="809" class="Comment"
       >
+
 </a
       ><a name="811"
       >\begin{code}
@@ -888,10 +888,10 @@
       >}</a
       ><a name="975"
       >
-\end{code}
-</a
-      ><a name="987" class="Comment"
+\end{code}</a
+      ><a name="986" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
