--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
@@ -40,10 +40,10 @@
       >Set</a
       ><a name="201"
       >
-\end{code}
-</a
-      ><a name="213" class="Comment"
+\end{code}</a
+      ><a name="212" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
