--- a/test/LaTeXAndHTML/succeed/Links.html
+++ b/test/LaTeXAndHTML/succeed/Links.html
@@ -75,10 +75,10 @@
       >&#8469;</a
       ><a name="182"
       >
-\end{code}
-</a
-      ><a name="194" class="Comment"
+\end{code}</a
+      ><a name="193" class="Comment"
       >
+
 See next page for how to define \AgdaFunction{two} (doesn't turn into a
 link because the target hasn't been defined yet). We could do it
 manually though; \hyperlink{two}{\AgdaDatatype{two}}.
@@ -128,10 +128,10 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
       >)</a
       ><a name="475"
       >
-\end{code}
-</a
-      ><a name="487" class="Comment"
+\end{code}</a
+      ><a name="486" class="Comment"
       >
+
 \AgdaInductiveConstructor{zero} is of type
 \AgdaDatatype{&#8469;}. \AgdaInductiveConstructor{suc} has not been defined to
 be a target so it doesn't turn into a link.
@@ -182,10 +182,10 @@ works automatically.
       >Bool</a
       ><a name="804"
       >
-\end{code}
-</a
-      ><a name="816" class="Comment"
+\end{code}</a
+      ><a name="815" class="Comment"
       >
+
 The AgdaTarget command takes a list as input, enabling several targets
 to be specified as follows:
 
@@ -316,10 +316,10 @@ to be specified as follows:
       >f</a
       ><a name="1073"
       >
-\end{code}
-</a
-      ><a name="1085" class="Comment"
+\end{code}</a
+      ><a name="1084" class="Comment"
       >
+
 \newpage
 
 Mixfix identifier need their underscores escaped:
