--- a/test/LaTeXAndHTML/succeed/Multiline.html
+++ b/test/LaTeXAndHTML/succeed/Multiline.html
@@ -57,10 +57,10 @@
         \World!&quot;</a
       ><a name="153"
       >
-\end{code}
-</a
-      ><a name="165" class="Comment"
-      >\end{document}
+\end{code}</a
+      ><a name="164" class="Comment"
+      >
+\end{document}
 </a
       ></pre
     ></body
