--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -32,10 +32,10 @@
       >where</a
       ><a name="109"
       >
-\end{code}
-</a
-      ><a name="121" class="Comment"
+\end{code}</a
+      ><a name="120" class="Comment"
       >
+
 </a
       ><a name="122"
       >\begin{code}
@@ -54,10 +54,10 @@
       ><a name="154"
       >
 
-\end{code}
-</a
-      ><a name="167" class="Comment"
+\end{code}</a
+      ><a name="166" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
