--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
@@ -32,10 +32,10 @@
       >where</a
       ><a name="113"
       >
-\end{code}
-</a
-      ><a name="125" class="Comment"
-      >}
+\end{code}</a
+      ><a name="124" class="Comment"
+      >
+}
 
 \section{Syntax}
 Text1
@@ -63,10 +63,10 @@ Text1
       >postulate</a
       ><a name="205"
       >
-\end{code}
-</a
-      ><a name="217" class="Comment"
-      >}
+\end{code}</a
+      ><a name="216" class="Comment"
+      >
+}
 
 Text2
 
@@ -86,10 +86,10 @@ Text2
       >Set</a
       ><a name="252"
       >
-\end{code}
-</a
-      ><a name="264" class="Comment"
+\end{code}</a
+      ><a name="263" class="Comment"
       >
+
 Text3
 \end{document}
 </a
