--- a/test/LaTeXAndHTML/succeed/Options.html
+++ b/test/LaTeXAndHTML/succeed/Options.html
@@ -41,10 +41,10 @@
       >#-}</a
       ><a name="150"
       >
-\end{code}
-</a
-      ><a name="162" class="Comment"
+\end{code}</a
+      ><a name="161" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
