--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
@@ -159,10 +159,10 @@
       >where</a
       ><a name="223"
       >
-\end{code}
-</a
-      ><a name="235" class="Comment"
+\end{code}</a
+      ><a name="234" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
