--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
@@ -188,10 +188,10 @@
       >where</a
       ><a name="255"
       >
-\end{code}
-</a
-      ><a name="267" class="Comment"
+\end{code}</a
+      ><a name="266" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
