--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.html
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.html
@@ -289,10 +289,10 @@
       >c</a
       ><a name="312"
       >
-\end{code}
-</a
-      ><a name="324" class="Comment"
+\end{code}</a
+      ><a name="323" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
