--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -46,10 +46,10 @@
       >Set</a
       ><a name="106"
       >
-\end{code}
-</a
-      ><a name="118" class="Comment"
+\end{code}</a
+      ><a name="117" class="Comment"
       >
+
 </a
       ><a name="119"
       >\begin{code}
@@ -81,10 +81,10 @@
       >Set</a
       ><a name="163"
       >
-\end{code}
-</a
-      ><a name="175" class="Comment"
+\end{code}</a
+      ><a name="174" class="Comment"
       >
+
 </a
       ><a name="176"
       >\begin{code}
@@ -128,10 +128,10 @@
       >Set</a
       ><a name="230"
       >
-\end{code}
-</a
-      ><a name="242" class="Comment"
+\end{code}</a
+      ><a name="241" class="Comment"
       >
+
 \begin{AgdaMultiCode}{2}
 </a
       ><a name="268"
@@ -150,8 +150,12 @@
       >L</a
       ><a name="297"
       >
-\end{code}
-\begin{code}
+\end{code}</a
+      ><a name="308" class="Comment"
+      >
+</a
+      ><a name="309"
+      >\begin{code}
       </a
       ><a name="328" href="Relative-indentation.html#328" class="Postulate"
       >M</a
@@ -165,10 +169,10 @@
       >Set</a
       ><a name="335"
       >
-\end{code}
-</a
-      ><a name="347" class="Comment"
-      >\end{AgdaMultiCode}
+\end{code}</a
+      ><a name="346" class="Comment"
+      >
+\end{AgdaMultiCode}
 
 </a
       ><a name="368"
@@ -212,10 +216,10 @@
       >Set</a
       ><a name="430"
       >
-\end{code}
-</a
-      ><a name="442" class="Comment"
+\end{code}</a
+      ><a name="441" class="Comment"
       >
+
 % There is (and should be) trailing whitespace at the end of some
 % lines below.
 
@@ -236,9 +240,9 @@ text </a
       >where</a
       ><a name="583"
       >
-\end{code} </a
-      ><a name="595" class="Comment"
-      >more text
+\end{code}</a
+      ><a name="594" class="Comment"
+      > more text
     also text  </a
       ><a name="620"
       >\begin{code}
@@ -259,9 +263,9 @@ text </a
       >Set</a
       ><a name="654"
       >  
-  \end{code} </a
-      ><a name="670" class="Comment"
-      >text again
+  \end{code}</a
+      ><a name="669" class="Comment"
+      > text again
 
  text          </a
       ><a name="697"
@@ -283,9 +287,9 @@ text </a
       >O</a
       ><a name="741"
       >    
-  \end{code}   </a
-      ><a name="761" class="Comment"
-      >text             
+  \end{code}</a
+      ><a name="758" class="Comment"
+      >   text             
 \end{AgdaAlign}
 
 </a
@@ -309,10 +313,10 @@ text </a
       >Set</a
       ><a name="827"
       >
-\end{code}
-</a
-      ><a name="839" class="Comment"
+\end{code}</a
+      ><a name="838" class="Comment"
       >
+
 </a
       ><a name="840"
       >\begin{code}
@@ -347,10 +351,10 @@ text </a
       >Set</a
       ><a name="888"
       >
-\end{code}
-</a
-      ><a name="900" class="Comment"
+\end{code}</a
+      ><a name="899" class="Comment"
       >
+
 </a
       ><a name="901"
       >\begin{code}
@@ -385,10 +389,10 @@ text </a
       >Set</a
       ><a name="965"
       >
-\end{code}
-</a
-      ><a name="977" class="Comment"
+\end{code}</a
+      ><a name="976" class="Comment"
       >
+
 \begin{AgdaMultiCode}{2}
 </a
       ><a name="1003"
@@ -406,8 +410,12 @@ text </a
       >where</a
       ><a name="1030"
       >
-\end{code}
-\begin{code}
+\end{code}</a
+      ><a name="1041" class="Comment"
+      >
+</a
+      ><a name="1042"
+      >\begin{code}
   </a
       ><a name="1057" class="Keyword"
       >postulate</a
@@ -438,10 +446,10 @@ text </a
       >Set</a
       ><a name="1094"
       >
-\end{code}
-</a
-      ><a name="1106" class="Comment"
-      >\end{AgdaMultiCode}
+\end{code}</a
+      ><a name="1105" class="Comment"
+      >
+\end{AgdaMultiCode}
 
 \begin{AgdaSuppressSpace}{2}
 </a
@@ -460,8 +468,12 @@ text </a
       >where</a
       ><a name="1183"
       >
-\end{code}
-\begin{code}
+\end{code}</a
+      ><a name="1194" class="Comment"
+      >
+</a
+      ><a name="1195"
+      >\begin{code}
   </a
       ><a name="1210" class="Keyword"
       >postulate</a
@@ -492,10 +504,10 @@ text </a
       >Set</a
       ><a name="1247"
       >
-\end{code}
-</a
-      ><a name="1259" class="Comment"
-      >\end{AgdaSuppressSpace}
+\end{code}</a
+      ><a name="1258" class="Comment"
+      >
+\end{AgdaSuppressSpace}
 
 </a
       ><a name="1284"
@@ -527,10 +539,10 @@ text </a
       >Set</a
       ><a name="1315"
       >
-\end{code}
-</a
-      ><a name="1327" class="Comment"
+\end{code}</a
+      ><a name="1326" class="Comment"
       >
+
 </a
       ><a name="1328"
       >\begin{code}
@@ -600,10 +612,10 @@ text </a
       >X</a
       ><a name="1412"
       >
-\end{code}
-</a
-      ><a name="1424" class="Comment"
+\end{code}</a
+      ><a name="1423" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
