--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -211,10 +211,10 @@
       >Set</a
       ><a name="295"
       >
-\end{code}
-</a
-      ><a name="307" class="Comment"
+\end{code}</a
+      ><a name="306" class="Comment"
       >
+
 \begin{tabular}{ll}
   Name &amp; Test \\
   \hline
