--- a/test/LaTeXAndHTML/succeed/TeXExtension.html
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.html
@@ -110,10 +110,10 @@ Foo
       ><a name="188"
       >
 
-\end{code}
-</a
-      ><a name="201" class="Comment"
+\end{code}</a
+      ><a name="200" class="Comment"
       >
+
   c : Bool
   c = broccoli
 
