--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.html
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.html
@@ -36,10 +36,10 @@
       >
 
 
-\end{code}
-</a
-      ><a name="118" class="Comment"
-      >\end{document}
+\end{code}</a
+      ><a name="117" class="Comment"
+      >
+\end{document}
 </a
       ></pre
     ></body
