--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -53,54 +53,54 @@
       >Set</a
       ><a name="142"
       >  
-\end{code}
-</a
-      ><a name="156" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="155" class="Comment"
+      >
+\hrule
 </a
       ><a name="163"
       >\begin{code}
   
-\end{code}
-</a
-      ><a name="190" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="189" class="Comment"
+      >
+\hrule
 </a
       ><a name="197"
       >\begin{code}
 
-\end{code}
-</a
-      ><a name="222" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="221" class="Comment"
+      >
+\hrule
 </a
       ><a name="229"
       >\begin{code}
-\end{code}
-</a
-      ><a name="253" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="252" class="Comment"
+      >
+\hrule
 </a
       ><a name="260"
       >\begin{code}  
-  \end{code}
-</a
-      ><a name="288" class="Comment"
-      >\hrule
+  \end{code}</a
+      ><a name="287" class="Comment"
+      >
+\hrule
   </a
       ><a name="297"
       >\begin{code}  
-\end{code}
-</a
-      ><a name="323" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="322" class="Comment"
+      >
+\hrule
   </a
       ><a name="332"
       >\begin{code}  
-    \end{code}
-</a
-      ><a name="362" class="Comment"
-      >\hrule
+    \end{code}</a
+      ><a name="361" class="Comment"
+      >
+\hrule
 </a
       ><a name="369"
       >\begin{code}
@@ -117,8 +117,12 @@
       >where</a
       ><a name="396"
       >
-\end{code}
-\begin{code}
+\end{code}</a
+      ><a name="407" class="Comment"
+      >
+</a
+      ><a name="408"
+      >\begin{code}
   
   </a
       ><a name="426" class="Keyword"
@@ -138,10 +142,10 @@
       >Set</a
       ><a name="447"
       >
-\end{code}
-</a
-      ><a name="459" class="Comment"
-      >\hrule
+\end{code}</a
+      ><a name="458" class="Comment"
+      >
+\hrule
 \begin{AgdaAlign}
 </a
       ><a name="484"
@@ -185,17 +189,21 @@
       >F</a
       ><a name="532"
       >  
-\end{code}
-\begin{code}
+\end{code}</a
+      ><a name="545" class="Comment"
+      >
+</a
+      ><a name="546"
+      >\begin{code}
           </a
       ><a name="569" href="Trailing-whitespace.html#123" class="Postulate"
       >A</a
       ><a name="570"
       >
-\end{code}
-</a
-      ><a name="582" class="Comment"
-      >\end{AgdaAlign}
+\end{code}</a
+      ><a name="581" class="Comment"
+      >
+\end{AgdaAlign}
 \hrule
 
 \end{document}
