--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
@@ -44,10 +44,10 @@
       >Set</a
       ><a name="276"
       >
-\end{code}
-</a
-      ><a name="288" class="Comment"
+\end{code}</a
+      ><a name="287" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
