--- a/test/LaTeXAndHTML/succeed/UnicodeInput.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.html
@@ -57,10 +57,10 @@
       >Set</a
       ><a name="143"
       >
-\end{code}
-</a
-      ><a name="155" class="Comment"
+\end{code}</a
+      ><a name="154" class="Comment"
       >
+
 \[
 &#8704;X [ &#8709; &#8713; X &#8658; &#8707;f:X &#10230;  &#8899; X\ &#8704;A &#8712; X (f(A) &#8712; A) ]
 \]
