--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
@@ -47,10 +47,10 @@
       >Set</a
       ><a name="186"
       >
-\end{code}
-</a
-      ><a name="198" class="Comment"
+\end{code}</a
+      ><a name="197" class="Comment"
       >
+
 The two \AgdaKeyword{field} keywords should not be aligned:
 </a
       ><a name="259"
@@ -109,10 +109,10 @@ The two \AgdaKeyword{field} keywords should not be aligned:
       >Set</a
       ><a name="351"
       >
-\end{code}
-</a
-      ><a name="363" class="Comment"
+\end{code}</a
+      ><a name="362" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
