--- a/test/LaTeXAndHTML/succeed/Indenting5.html
+++ b/test/LaTeXAndHTML/succeed/Indenting5.html
@@ -138,10 +138,10 @@
       >public</a
       ><a name="203"
       >
-\end{code}
-</a
-      ><a name="215" class="Comment"
+\end{code}</a
+      ><a name="214" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
