--- a/test/LaTeXAndHTML/succeed/Issue2453.html
+++ b/test/LaTeXAndHTML/succeed/Issue2453.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 ><head
   ><title
-    >AccidentalSpacesBeforeEndCode</title
+    >Issue2453</title
     ><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"
      /><meta http-equiv="Content-Style-Type" content="text/css"
      /><link href="Agda.css" rel="stylesheet" type="text/css"
@@ -10,31 +10,14 @@
   ><body
   ><pre
     ><a name="1" class="Comment"
-      >\documentclass{article}
+      >\nonstopmode
+\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a
-      ><a name="63"
-      >\begin{code}
-</a
-      ><a name="76" class="Keyword"
-      >module</a
-      ><a name="82"
-      > </a
-      ><a name="83" href="AccidentalSpacesBeforeEndCode.html#1" class="Module"
-      >AccidentalSpacesBeforeEndCode</a
-      ><a name="112"
-      > </a
-      ><a name="113" class="Keyword"
-      >where</a
-      ><a name="118"
-      >
-  \end{code}</a
-      ><a name="131" class="Comment"
-      >
+\begin{code} this is not valid agda code \end{code}
 
 \end{document}
 </a
