--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.html
@@ -145,10 +145,10 @@
       >where</a
       ><a name="203"
       >
-\end{code}
-</a
-      ><a name="215" class="Comment"
+\end{code}</a
+      ><a name="214" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
