[ fix ] Fix golden file for latex-html-test/Issue2588

--- a/test/LaTeXAndHTML/succeed/Issue2588.html
+++ b/test/LaTeXAndHTML/succeed/Issue2588.html
@@ -39,10 +39,10 @@
 -}</a
       ><a name="105"
       >
-\end{code}
-</a
-      ><a name="117" class="Comment"
+\end{code}</a
+      ><a name="116" class="Comment"
       >
+
 \end{document}
 </a
       ></pre
